# pomodoro

./: Cargo.toml  README.md  justfile
i18n/en/: pomodoro.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  main.rs
